--- a/karya2.html
+++ b/karya2.html
@@ -35,7 +35,7 @@
   <canvas id="stars-canvas"></canvas>
 
   <header>
-    <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 120px; display: block; margin: 0 auto 1rem auto;" />
+    <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" class="logo-lily" />
     <h1>Di Antara Luka<br>yang Tak Bertepuk</h1>
     <p class="tagline">“Yang tak sempat dimengerti.”</p>
     <a href="archive.html" class="button">⟵ Back To Archive</a>
