--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
     <p>
       Lumen Obscura adalah sebuah nama pena dari seseorang yang lebih sering menulis dalam waktu luangnya.
-      Meski sempat menjauh dari dunia tulisan, kini ia kembali, menyusuri jejak jejak sunyi —<br>
+      Meski sempat menjauh dari dunia menulis, kini ia kembali, menyusuri jejak jejak sunyi;<br>
       yang dulu pernah ia tinggalkan.
     </p>
 
@@ -65,7 +65,7 @@
   </main>
 
   <footer style="text-align: center; padding: 2rem 0;">
-    <p>© 2025 Scriptum Cordis — Written by <em>Lumen Obscura</em></p>
+    <p>© 2025 Scriptum Cordis, Solum Caelis — Written by <em>Lumen Obscura</em></p>
   </footer>
 
   <!-- Pemutar Musik -->
