--- a/karya2.html
+++ b/karya2.html
@@ -10,8 +10,6 @@
       background-color: #0e0f1c;
       color: #f0f0f0;
       font-family: 'Georgia', serif;
-      margin: 0;
-      overflow-x: hidden;
     }
     header, main, footer, nav, section {
       position: relative;
@@ -22,21 +20,19 @@
       backdrop-filter: blur(4px);
       border-radius: 12px;
     }
-    #stars-canvas, #flower-canvas {
+    #stars-canvas {
       position: fixed;
       top: 0;
       left: 0;
       z-index: 0;
       width: 100%;
       height: 100%;
-      pointer-events: none;
     }
   </style>
 </head>
 <body>
-  <!-- Canvas efek bintang & bunga -->
+  <!-- Falling Stars Canvas -->
   <canvas id="stars-canvas"></canvas>
-  <canvas id="flower-canvas"></canvas>
 
   <header>
     <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" class="logo-lily" />
@@ -68,7 +64,6 @@
     <p>Aku mencintaimu.<br>Dengan versi yang belum sempurna,<br>Tapi tak pernah malas untuk belajar.<br>Aku mencintaimu,<br>Dengan dada yang terbuka,<br>Meski kadang disayat kata-kata.</p>
     <p>Tapi aku bertanya,<br>Bukankah cinta juga butuh empati?<br>Bukankah mencinta bukan sekadar mengingat kesalahan,<br>Tapi juga melihat bagaimana seseorang belajar jadi lebih baik,<br>Meski hancur dalam prosesnya?</p>
     <p>Aku bukan ingin kamu melupakan salahku,<br>Aku hanya ingin kamu lihat aku kini;<br>Yang lebih lembut dalam menatapmu,<br>Lebih hati-hati dalam bertutur,<br>Lebih sadar bahwa cinta bukan tentang ingin dimenangkan,<br>Tapi saling memeluk walau sama-sama pecah.</p>
-   
 
     <!-- Time Spent -->
     <p id="time-spent-display" style="margin-top: 2rem; font-style: italic; color: #aaa;"></p>
@@ -86,14 +81,7 @@
     <p>© 2025 Scriptum Cordis — Written by <em>Lumen Obscura</em></p>
   </footer>
 
-  <!-- Audio Player -->
-  <audio id="player" autoplay hidden></audio>
-  <div id="music-controls">
-    <button id="toggle-mute">🔊</button>
-    <span id="now-playing"></span>
-  </div>
-
-  <!-- Falling Stars -->
+  <!-- Falling Stars Script -->
   <script>
     const canvas = document.getElementById('stars-canvas');
     const ctx = canvas.getContext('2d');
@@ -122,19 +110,23 @@
 
     function animateStars() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      for (let s of stars) {
+      for (let i = 0; i < stars.length; i++) {
+        const s = stars[i];
         ctx.beginPath();
         ctx.arc(s.x, s.y, s.size, 0, Math.PI * 2);
         ctx.fillStyle = `rgba(255, 255, 255, ${s.opacity})`;
         ctx.fill();
         s.y += s.speed;
         s.x -= s.speed * 0.3;
+
         if (s.y > canvas.height || s.x < 0) {
-          Object.assign(s, createStar(), { y: 0 });
+          stars[i] = createStar();
+          stars[i].y = 0;
         }
       }
       requestAnimationFrame(animateStars);
     }
+
     animateStars();
   </script>
 
@@ -142,17 +134,29 @@
   <script>
     let startTime = Date.now();
     function formatDuration(ms) {
-      const sec = Math.floor(ms / 1000), min = Math.floor(sec / 60), hr = Math.floor(min / 60);
-      const s = sec % 60, m = min % 60, h = hr;
-      return h > 0 ? `${h} hour${h !== 1 ? 's' : ''}, ${m} minute${m !== 1 ? 's' : ''}, and ${s} second${s !== 1 ? 's' : ''}`
-           : m > 0 ? `${m} minute${m !== 1 ? 's' : ''} and ${s} second${s !== 1 ? 's' : ''}`
-           : `${s} second${s !== 1 ? 's' : ''}`;
+      const sec = Math.floor(ms / 1000);
+      const min = Math.floor(sec / 60);
+      const hr = Math.floor(min / 60);
+      const s = sec % 60;
+      const m = min % 60;
+      const h = hr;
+
+      const hourText = h > 0 ? `${h} hour${h !== 1 ? 's' : ''}` : '';
+      const minuteText = m > 0 ? `${m} minute${m !== 1 ? 's' : ''}` : '';
+      const secondText = `${s} second${s !== 1 ? 's' : ''}`;
+
+      if (h > 0) return `${hourText}, ${minuteText}, and ${secondText}`;
+      else if (m > 0) return `${minuteText} and ${secondText}`;
+      return secondText;
     }
-    setInterval(() => {
-      const duration = Date.now() - startTime;
+
+    function updateTimeSpent() {
+      const now = Date.now();
+      const duration = now - startTime;
       document.getElementById("time-spent-display").textContent =
         `⏱ Thank you, you have been with us for ${formatDuration(duration)}.`;
-    }, 1000);
+    }
+    setInterval(updateTimeSpent, 1000);
   </script>
 
   <!-- Firebase Komentar -->
@@ -176,7 +180,7 @@
 
     window.submitComment = function () {
       const comment = document.getElementById("comment-input").value.trim();
-      if (!comment) return;
+      if (comment === "") return;
       const now = new Date();
       const time = now.toLocaleTimeString('en-US', { hour12: false });
       const date = now.toLocaleDateString('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
@@ -196,6 +200,11 @@
   </script>
 
   <!-- Musik -->
+  <audio id="player" autoplay hidden></audio>
+  <div id="music-controls">
+    <button id="toggle-mute">🔊</button>
+    <span id="now-playing"></span>
+  </div>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const playlist = [
@@ -213,26 +222,38 @@
         "limbo.mp3"
       ];
 
-      const shuffle = arr => arr.sort(() => Math.random() - 0.5);
+      function shuffle(array) {
+        for (let i = array.length - 1; i > 0; i--) {
+          const j = Math.floor(Math.random() * (i + 1));
+          [array[i], array[j]] = [array[j], array[i]];
+        }
+        return array;
+      }
+
       const player = document.getElementById("player");
       const nowPlaying = document.getElementById("now-playing");
       const toggleMute = document.getElementById("toggle-mute");
 
-      let tracks = shuffle([...playlist]), current = 0;
+      let shuffled = shuffle([...playlist]);
+      let current = 0;
 
-      function formatName(file) {
-        return file.replace(".mp3", "").replace(/_/g, " ").replace(/\b\w/g, l => l.toUpperCase());
+      function formatTrackName(filename) {
+        return filename
+          .replace(".mp3", "")
+          .replace(/_/g, " ")
+          .replace(/\b\w/g, l => l.toUpperCase());
       }
 
       function playNext() {
-        player.src = tracks[current];
+        const track = shuffled[current];
+        player.src = track;
         player.volume = 0.25;
-        nowPlaying.textContent = "Now Playing: " + formatName(tracks[current]);
-        player.play().catch(() => {});
+        nowPlaying.textContent = "Now Playing: " + formatTrackName(track);
+        player.play().catch(err => console.log("Gagal autoplay:", err));
       }
 
       player.addEventListener("ended", () => {
-        current = (current + 1) % tracks.length;
+        current = (current + 1) % shuffled.length;
         playNext();
       });
 
@@ -249,54 +270,5 @@
       playNext();
     });
   </script>
-
-  <!-- Efek Bunga Berkembang -->
-  <script>
-    const flowerCanvas = document.getElementById('flower-canvas');
-    const fCtx = flowerCanvas.getContext('2d');
-    let flowers = [];
-
-    function resizeFlowerCanvas() {
-      flowerCanvas.width = window.innerWidth;
-      flowerCanvas.height = window.innerHeight;
-    }
-    window.addEventListener('resize', resizeFlowerCanvas);
-    resizeFlowerCanvas();
-
-    class Flower {
-      constructor() {
-        this.x = Math.random() * flowerCanvas.width;
-        this.y = Math.random() * flowerCanvas.height;
-        this.size = 0;
-        this.maxSize = Math.random() * 15 + 10;
-        this.growth = Math.random() * 0.2 + 0.05;
-        this.opacity = 0;
-        this.color = `rgba(255,192,203,`;
-      }
-
-      draw() {
-        if (this.size < this.maxSize) {
-          this.size += this.growth;
-          this.opacity += 0.005;
-        }
-        fCtx.beginPath();
-        fCtx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-        fCtx.fillStyle = `${this.color}${Math.min(this.opacity, 0.3)})`;
-        fCtx.fill();
-      }
-    }
-
-    function animateFlowers() {
-      fCtx.clearRect(0, 0, flowerCanvas.width, flowerCanvas.height);
-      if (flowers.length < 100 && Math.random() < 0.1) {
-        flowers.push(new Flower());
-      }
-      flowers.forEach(f => f.draw());
-      requestAnimationFrame(animateFlowers);
-    }
-
-    animateFlowers();
-  </script>
 </body>
 </html>
-
