--- a/karya2.html
+++ b/karya2.html
@@ -154,7 +154,7 @@
       const now = Date.now();
       const duration = now - startTime;
       document.getElementById("time-spent-display").textContent =
-        `⏱ Thank you, you have been with us for ${formatDuration(duration)}.`;
+        `⏱ Thank you so much, for you have spent your time with me for ${formatDuration(duration)}.`;
     }
     setInterval(updateTimeSpent, 1000);
   </script>
