--- a/karya2.html
+++ b/karya2.html
@@ -78,7 +78,7 @@
   </section>
 
   <footer style="text-align: center; padding: 2rem 0;">
-    <p>© 2025 Scriptum Cordis — Written by <em>Lumen Obscura</em></p>
+    <p>© 2025 Scriptum Cordis, Solum Caelis — Written by <em>Lumen Obscura</em></p>
   </footer>
 
   <!-- Falling Stars Script -->
