--- a/karya2.html
+++ b/karya2.html
@@ -56,7 +56,15 @@
     <p>Aku hanya ingin dimengerti, bukan dibenarkan.<br>Dipeluk, bukan dijatuhi dakwaan.</p>
     <p>Engkau,<br>Menjadi palu yang menghantam dadaku.<br>Bukan atap yang melindungi saat hujan di dalam diriku,<br>Tak tahu lagi ke mana harus mencari teduh.</p>
     <p>Engkau,<br>Menjadi tangga yang jatuh saat aku terjerembab,<br>Menjadi tanya yang tak kunjung kau jawab,<br>Menjadi jarak yang tak bisa kuukur dengan rindu semata.</p>
-    <p>Dan aku terdiam,<br>Menjadi sunyi yang menampung teriakku sendiri,<br>Menjadi tisu bagi tangisku sendiri,<br>Menjadi rumah yang hangus oleh api,<br>Yang tak pernah kau padamkan.</p>
+    <p>Dan aku terdiam,<br>
+      Menjadi sunyi yang menampung teriakku sendiri,<br>
+      Menjadi tisu bagi tangisku sendiri,<br>
+      Menjadi rumah yang hangus oleh api,<br>
+      Yang tak pernah kau <span id="extinguish-btn" class="sparkle">padamkan</span>.
+  <span class="fire-overlay"></span>
+</span></p>
+
+    
     <p>Aku tahu aku bersalah,<br>Tapi bukan berarti aku tak layak untuk dimanusiakan.<br>Bukan berarti aku hanya pantas dimarahi, dihakimi,<br>Dan tak diberi ruang untuk diperbaiki, dikasihi, disayangi.</p>
     <p>Aku bukan dinding,<br>Yang kau jadikan tempat memukul semua kecewa.<br>Aku pun butuh disentuh, dimaafkan, dihargai,<br>Dan dibaca; laksana puisi yang tak ingin diakhiri.</p>
     <p>Di luar sana,<br>Satu per satu mimpiku mulai tumbang.<br>Dan setiap kegagalan itu, kian menundukkan punggung dan lututku.<br>Dan ketika aku pulang padamu, bukan untuk meminta solusi,<br>Hanya untuk ditanya: “Kamu baik-baik saja sayang?”, "Tak apa, ada aku disini sayang"<br>"Dunia boleh jahat sama kamu, tapi kamu selalu punya aku, sayang."<br>Tetapi, engkau terdiam.<br>Atau bahkan, menambah luka baru.<br>Seolah-olah aku masih harus membayar kesalahan<br>Yang pernah kulunasi dengan seluruh harga diri.</p>
