--- a/karya2.html
+++ b/karya2.html
@@ -32,7 +32,17 @@
 </head>
 <body>
   <!-- Falling Stars Canvas -->
-  <canvas id="stars-canvas"></canvas>
+  <canvas id="stars-canvas"
+    style="
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    ">
+</canvas>
 
   <header>
     <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" class="logo-lily" />
