--- a/karya2.html
+++ b/karya2.html
@@ -66,14 +66,17 @@
     <p>Aku hanya ingin dimengerti, bukan dibenarkan.<br>Dipeluk, bukan dijatuhi dakwaan.</p>
     <p>Engkau,<br>Menjadi palu yang menghantam dadaku.<br>Bukan atap yang melindungi saat hujan di dalam diriku,<br>Tak tahu lagi ke mana harus mencari teduh.</p>
     <p>Engkau,<br>Menjadi tangga yang jatuh saat aku terjerembab,<br>Menjadi tanya yang tak kunjung kau jawab,<br>Menjadi jarak yang tak bisa kuukur dengan rindu semata.</p>
-    <p>Dan aku terdiam,<br>
-      Menjadi sunyi yang menampung teriakku sendiri,<br>
-      Menjadi tisu bagi tangisku sendiri,<br>
-      <span id="burning-line">
+    
+      <p>Dan aku terdiam,<br>
+  Menjadi sunyi yang menampung teriakku sendiri,<br>
+  Menjadi tisu bagi tangisku sendiri,<br>
   Menjadi rumah yang hangus oleh api,<br>
-  Yang tak pernah kau <span class="sparkle">padamkan</span>.
-  <span class="fire-overlay"></span>
-</span>
+  Yang tak pernah kau 
+  <span id="burning-line">
+    <span class="sparkle">padamkan</span>
+    <span class="fire-overlay"></span>
+  </span>.
+</p>
 
     
     <p>Aku tahu aku bersalah,<br>Tapi bukan berarti aku tak layak untuk dimanusiakan.<br>Bukan berarti aku hanya pantas dimarahi, dihakimi,<br>Dan tak diberi ruang untuk diperbaiki, dikasihi, disayangi.</p>
