--- a/karya2.html
+++ b/karya2.html
@@ -74,8 +74,7 @@
   Yang tak pernah kau 
   <span id="burning-line">
     <span class="sparkle">padamkan</span>
-    <span class="fire-flames"></span>
-  </span>.
+  </span>
 </p>
 
     
