--- a/karya2.html
+++ b/karya2.html
@@ -74,6 +74,7 @@
   Yang tak pernah kau 
   <span id="burning-line">
     <span class="sparkle">padamkan</span>
+    <img src="flame.gif" alt="fire" class="flame-gif">
   </span>
 </p>
 
