--- a/index.html
+++ b/index.html
@@ -40,6 +40,29 @@
       </p>
     </article>
 
+    <article>
+      <h2>Satu Persen Harapan</h2>
+      <p class="date">04 Juli 2025</p>
+      <p>
+        Tatkala tersisa saru persen harapan, yang kupegang erat dalam genggaman.<br>
+        Laksana embun di ujunh dedaunan, menunggu pagi tak bertahan.
+      </p>
+      <p>
+        Pada satu persen yang kuucap dalam doa yang syahdu,<br>
+        terselip namamu di setiap waktu.<br>
+        walau mungkin tak cukup untuk membawamu kembali padaku,<br>
+        tapi cukup untuk memberikan hangat dalam kalbu.<br>
+      </p>
+      <p>
+        Dan jika pada akhirnya satu persen ini hilang,<br>
+        aku ingin percaya bahwa ini bukan salahmu, bukan juga salahku.<br>
+        Mungkin memang sudah semestinya begitu;<br>
+        Rindu tak harus kembali, luka tak seharusnya sembuh,<br>
+        dan kisah kita tak harus memiliki akhir yang bahagia.<br>
+        Antara tuntas di pelaminan, atau tuntas di ikhlaskan.<br>
+         </p>
+    </article>
+
     <!-- Komentar Anonim -->
     <section id="comments-section">
       <h3>Leave a Message Anonymously</h3>
