--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     </p>
 
     <p>
-      Lewat untaian kata, ia mencurahkan hal-hal yang tak sempat terucap:<br>  
+      Lewat untaian kata, ia mencurahkan hal hal yang tak sempat terucap:<br>  
       tentang rasa gundah gulana, tentang kehilangan, tentang cinta,<br>
       dan tak pula lupa, harapan yang tak selalu pulang.
     </p>
@@ -52,14 +52,14 @@
 
     <p>
       Every piece written here is a reflection of the silent echoes within,
-      a whisper from the soul to the stars, a reminder that not all stories are meant to be explained —
+      a whisper from the soul to the stars, a reminder that not all stories are meant to be explained; 
       some are simply meant to be felt, to drift gently into the vastness of existence,
       and find rest not on paper, but in the quiet spaces between hearts.
     </p>
 
     <p>
       Singkatnya,<br>
-      Ini bukan tempat untuk didengar, melainkan untuk dibaca.<br> 
+      Ini bukan tempat untuk dibaca, melainkan untuk di dengar.<br> 
       Dan mungkin, suatu hari nanti, <em>dipahami.</em>
     </p>
   </main>
