--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <h2>Satu Persen Harapan</h2>
       <p class="date">04 Juli 2025</p>
       <p>
-        Tatkala tersisa saru persen harapan, yang kupegang erat dalam genggaman.<br>
-        Laksana embun di ujunh dedaunan, menunggu pagi tak bertahan.
+        Tatkala tersisa satu persen harapan, yang kupegang erat dalam genggaman.<br>
+        Laksana embun di ujung dedaunan, menunggu pagi tak bertahan.
       </p>
       <p>
         Pada satu persen yang kuucap dalam doa yang syahdu,<br>
