--- a/archive.html
+++ b/archive.html
@@ -29,6 +29,11 @@
           Aku bersalah. Itu tak perlu kau ulang. Dadaku sudah lebih dulu mengakuinya...
         </p>
       </article>
+        <article>
+        <h2><a href="karya3.html">Ad Aeternum, Semper Tuum</a></h2>
+        <p class="date">10 July 2025</p>
+        <p>Pernah aku percaya, bahwa cinta hanyalah sebuah ilusi. </p>
+      </article>
     </section>
   </main>
  <!-- Pemutar Musik -->
