--- a/karya3.html
+++ b/karya3.html
@@ -147,7 +147,13 @@ And truth be told, itu ngingetin aku ke kamu.<br>
 Always be my cape ya, semestaku.<br>
 I love you❤️
 </p>
+   <img 
+  src="CAE31508-25BF-4B12-AEC5-1EF7EB20BE0C.png" 
+  alt="Hoy me acuerdo de tus besos aunque ya no estés aquí" 
+  style="display: block; margin: 2.5rem auto 1.5rem auto; max-width: 90%; height: auto; border-radius: 10px; box-shadow: 0 4px 12px rgba(255, 255, 255, 0.15);" 
+  loading="lazy" /> 
 
+  
     <!-- Time Spent -->
     <p id="time-spent-display" style="margin-top: 2rem; font-style: italic; color: #aaa;"></p>
   </main>
