--- a/karya3.html
+++ b/karya3.html
@@ -152,6 +152,7 @@ I love you❤️
   alt="Hoy me acuerdo de tus besos aunque ya no estés aquí" 
   style="display: block; margin: 2.5rem auto 1.5rem auto; max-width: 90%; height: auto; border-radius: 10px; box-shadow: 0 4px 12px rgba(255, 255, 255, 0.15);" 
   loading="lazy" /> 
+    <p>Hoy me acuerdo de tus besos aunque ya no estés aquí.</p>
 
   
     <!-- Time Spent -->
@@ -308,7 +309,10 @@ I love you❤️
         "saturn_x_slow_dancing.mp3",
         "make_you_mine.mp3",
         "love_me.mp3",
-        "limbo.mp3"
+        "limbo.mp3",
+        "la_distancia.mp3",
+        "twenties.mp3",
+        "superman.mp3"
       ];
 
       function shuffle(array) {
