--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
         "saturn_x_slow_dancing.mp3",
         "make_you_mine.mp3",
         "love_me.mp3",
-        "limbo.mp3"
+        "limbo.mp3",
+        "la_distancia.mp3",
+        "twenties.mp3",
+        "superman.mp3"
       ];
 
       function shuffle(array) {
