--- a/karya3.html
+++ b/karya3.html
@@ -59,17 +59,19 @@
 
   <main style="max-width: 700px; margin: auto; padding: 2rem; line-height: 1.8;">
     <!-- Isi Puisi -->
-    <p>
-      Pernah aku percaya, bahwa cinta hanyalah sebuah ilusi.<br>
+<p>
+Pernah aku percaya,<br>
+bahwa cinta hanyalah sebuah ilusi.<br>
 Sekadar nyanyian sendu dalam puisi,<br>
 tak lebih dari mimpi para penyair di dini hari.<br>
-Hingga; engkau datang.<br>
+Hingga; Engkau datang.<br>
 Dan segalanya; perlahan, berganti.<br>
 </p>
 
 <p>
 Hadirmu ada, bukan karena kupinta.<br>
-Namun semesta menaruhmu, pada garis takdirku.<br>
+Namun semesta menaruhmu,<br>
+  pada garis takdirku.<br>
 Bagai takdir yang datang tanpa aba aba,<br>
 namun menjelma keajaiban yang tak pernah kupeluk sebelumnya.<br>
 Dalam tatapanmu, aku menemukan arti pulang,<br>
@@ -77,9 +79,12 @@ dalam genggammu, kutemukan tenang.<br>
 </p>
 
 <p>
-Kupanggil engkau Semestaku; bukan hanya sekadar nama.<br>
-Karena bagiku; hadirmu membentang seperti angkasa yang tak berbatas,<br>
-dan jiwamu bercahaya, seperti bintang pada gelap yang paling pekat.<br>
+Kupanggil engkau Semestaku;<br>
+bukan hanya sekadar nama.<br>
+Karena bagiku; hadirmu membentang<br>
+seperti angkasa yang tak berbatas,<br>
+dan jiwamu bercahaya, seperti bintang<br>
+pada gelap yang paling pekat.<br>
 Kamu adalah matahari yang selalu setia,<br>
 mengusir dingin dari pagi pagi yang hampa.<br>
 </p>
@@ -87,15 +92,20 @@ mengusir dingin dari pagi pagi yang hampa.<br>
 <p>
 Satu tahun lebih, kita telah bersama.<br>
 Mengarungi gelombang waktu,<br>
-melewati ombak ragu, menguatkan langkah di jalan yang tak selalu rata.<br> 
-Aku melihatmu dalam segala bentuk keindahan. Dalam senyuman kecilmu,<br>
-dalam perhatian perhatian sederhana yang kamu sisipkan tanpa diminta,<br>
-dalam setiap genggaman tangan yang kau berikan serta kuatkan,<br>
+melewati ombak ragu, menguatkan langkah<br>
+di jalan yang tak selalu rata.<br> 
+Dan aku melihatmu dalam segala bentuk keindahan.<br>
+Dalam senyuman kecilmu,<br>
+dalam perhatian perhatian sederhana<br>
+yang kau sisipkan tanpa diminta,<br>
+dalam setiap genggaman tangan<br>
+yang kau berikan serta kuatkan,<br>
 saat dunia terasa melelahkan.<br>
 </p>
 
 <p>
-Bagaimana mungkin aku tidak mencintaimu sedalam ini?<br>
+Bagaimana mungkin<br>
+aku tidak mencintaimu sedalam ini?<br>
 Jika setiap hela nafasku ada karena hadirmu ?<br>
 Juga detik dan detaknya jantungku,<br>
 seirama namamu ?<br>
@@ -104,9 +114,11 @@ seirama namamu ?<br>
 <p>
 Aku tahu, perjalanan kita masih panjang.<br>
 Akan ada badai yang mencoba merobohkan,<br>
-akan ada malam yang mungkin terasa dingin dan sepi.<br>
-Tetapi bila kamu berada di sisiku, aku tak gentar.<br>
-Laksana bintang yang selalu kembali meski malam gelap,<br>
+akan ada malam yang mungkin<br>
+terasa dingin dan sepi.<br>
+Namun bila kau berada di sisiku, aku tak gentar.<br>
+Laksana bintang yang selalu kembali<br>
+meski malam gelap,<br>
 aku; akan selalu, kembali padamu.<br>
 </p>
 
@@ -126,8 +138,9 @@ yang tak akan pernah lelah kucintai.<br>
 Maka dengarlah, Semestaku;<br>
 dalam kencangnya hembusan angin,<br>
 dalam derasnya rintik hujan,<br>
-dalam sunyi, pada bisik doa yang kuucapkan dalam diam.<br>
-Aku memilihmu, selalu.<br>
+dalam sunyi, pada bisik doa,<br>
+yang kuucapkan dalam diam.<br>
+Aku akan memilihmu, selalu.<br>
 Hari ini, esok, dan selamanya.<br>
 </p>
 
@@ -137,22 +150,27 @@ Ayid.<br>
 </p>
 
 <p>
-P.S. you know, i saw a quote the other day my love.<br>
+P.S. you know,<br>
+i saw a quote the other day my love.<br>
 It goes something like this..<br>
+<p>
 My wife,<br>
 She put her arms around me,<br>
 She becomes a cape,<br>
 And i become superman.<br>
-And truth be told, itu ngingetin aku ke kamu.<br>
-Always be my cape ya, semestaku.<br>
-I love you❤️
+______________________<br>
+And truth be told, itu ngingetin aku, ke kamu.<br>
+thats you, sayang. Thats how you made me feel.<br>
+Always be my cape yah, semestaku tersayang.<br>
+I love you ❤️
 </p>
    <img 
   src="CAE31508-25BF-4B12-AEC5-1EF7EB20BE0C.png" 
   alt="Hoy me acuerdo de tus besos aunque ya no estés aquí" 
   style="display: block; margin: 2.5rem auto 1.5rem auto; max-width: 90%; height: auto; border-radius: 10px; box-shadow: 0 4px 12px rgba(255, 255, 255, 0.15);" 
   loading="lazy" /> 
-    <p>Hoy me acuerdo de tus besos aunque ya no estés aquí.</p>
+    <p>Hoy me acuerdo de tus besos,<br>
+      aunque no estés aquí.</p>
 
   
     <!-- Time Spent -->
