--- a/karya3.html
+++ b/karya3.html
@@ -124,7 +124,8 @@ aku; akan selalu, kembali padamu.<br>
 
 <p>
 Karena kamu,<br>
-adalah jawaban atas doa doa yang kupanjat, juga yang tak sempat terucap.<br>
+adalah jawaban atas doa doa yang kupanjat,<br>
+juga yang tak sempat terucap.<br>
 </p>
 
 <p>
